--- a/templates/url_all_stat.html.twig
+++ b/templates/url_all_stat.html.twig
@@ -13,8 +13,8 @@
                     <li>Code: {{ stats.code}}</li>
                     <li>Url: {{ stats.url }}</li>
                     <li>Counter: {{ stats.counter}}</li>
-{#                    <li>Date of creation: {{ stats.dateCreate|date("d M Y H:i")}}</li>#}
-{#                    <li>Date of the last transition: {{ stats.dateUpdate|date("d M Y H:i")}}</li>#}
+                    <li>Date of creation: {{ stats.createdAt|date("d M Y H:i")}}</li>
+                    <li>Date of the last transition: {{ stats.updatedAt|date("d M Y H:i")}}</li>
                 </ul>
             </li>
             {% endfor %}
