added templates, registration form, login route

--- a/templates/code_redirect.html.twig
+++ b/templates/code_redirect.html.twig
@@ -1,7 +1,9 @@
 {%extends 'base.html.twig' %}
 
 {% block title %}Redirect by Code{% endblock %}
-
+{#{% block buttons %}#}
+{#    <button onclick="location.href='/logout'" type="button" class="btn btn-outline-light me-2">Logout</button>#}
+{#{% endblock %}#}
 {% block content %}
 
     <section>
