--- a/templates/pages/main.html.twig
+++ b/templates/pages/main.html.twig
@@ -3,5 +3,10 @@
 {% block title %}Create new Code{% endblock %}
 
 {% block content %}
+{#    {% if is_granted('ROLE_USER') %}#}
+{#        11111#}
+{#        {% else %}#}
+{#        22222#}
+{#    {% endif %}#}
 This is main page
 {% endblock %}
