--- a/templates/url_all_stat.html.twig
+++ b/templates/url_all_stat.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}Url statistic{% endblock %}
 
+{#{% block buttons %}#}
+{#<button onclick="location.href='/logout'" type="button" class="btn btn-outline-light me-2">Logout</button>#}
+{#{% endblock %}#}
 {% block content %}
 
     <section>
