--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -84,13 +84,19 @@
                     <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
                 </form>
 
+{#                {% block buttons %}#}
                 <div class="text-end">
+                {% if is_granted('ROLE_USER') %}
+                    <button onclick="location.href='/logout'" type="button" class="btn btn-outline-light me-2">Logout</button>
+                    {% else %}
                     <button onclick="location.href='/login'" type="button" class="btn btn-outline-light me-2">Login</button>
                     <button onclick="location.href='/register'" type="button" class="btn btn-warning">Sign-up</button>
+                    {% endif %}
                     <div class="col-md-10 rigght">
                         {% block header %}{% endblock %}
                     </div>
                 </div>
+{#                {% endblock %}#}
             </div>
         </div>
     </header>
