--- a/templates/url_statistic.html.twig
+++ b/templates/url_statistic.html.twig
@@ -1,7 +1,9 @@
 {%extends 'base.html.twig' %}
 
 {% block title %}Url statistic{% endblock %}
-
+{#{% block buttons %}#}
+{#    <button onclick="location.href='/logout'" type="button" class="btn btn-outline-light me-2">Logout</button>#}
+{#{% endblock %}#}
 {% block content %}
 
 <section>
